Fixed: Patterned section titles are too large. Font needs to be same font size as item section titles.

--- a/themes/hush/src/sass/modules/content-page/_desktop.sass
+++ b/themes/hush/src/sass/modules/content-page/_desktop.sass
@@ -85,6 +85,8 @@
     padding-top: 170px
   .contentPage__item
     margin-bottom: 0px
+  .contentPage__ContentSection__title
+    font-size: 32px
 @media screen and (min-width : 960px)
   .contentPage__item__picture
     max-width: 35%
